[package]
name = "eventual"
version = "0.1.0"
edition = "2021"

[dependencies]
eventual-derive = { path = "eventual-derive" }
async-trait = "0.1"
strum = { version = "0.25", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.32", features = ["full"] }
tracing = "0.1"
chrono = "0.4.31"
rayon = "1.8.0"
dyn-clone = "1.0.16"
rustc-hash = "1.1.0"
downcast-rs = "1.2.0"
arc-swap = "1.6.0"
async-recursion = "1.0.5"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "eventual_bench"
harness = false
